# asteroid-virtualkeyboard

./: CMakeLists.txt  README.md  example.qml
layouts/fallback/: main.qml
styles/: CMakeLists.txt
styles/watch/: CMakeLists.txt  style.qml
