install(FILES ${STYLEFILES} 
        DESTINATION ${INSTALL_QML_IMPORT_DIR}/QtQuick/VirtualKeyboard/Styles/watch)

set(STYLEFILES 
    images/backspace-868482.svg
    images/check-868482.svg
    images/enter-868482.svg
    images/globe-868482.svg
    images/handwriting-868482.svg
    images/hidekeyboard-868482.svg
    images/search-868482.svg
    images/selectionhandle-bottom.svg
    images/shift-80c342.svg
    images/shift-868482.svg
    images/shift-c5d6b6.svg
    images/textmode-868482.svg
    style.qml)

